[package]
name = "saysthbot-reborn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wd_log = "0.1.5"
futures = "^0.3"
#lazy_static = "*"
strfmt = "^0.1.6"

[dependencies.clap]
version = "3.2.6"
features = ["derive", "env"]

[dependencies.tokio]
version = "^1.0"
features = ["full"]

[dependencies.teloxide]
version = "^0.9"
features = ["macros"]

# use RUSTFLAGS="-C target-feature=-crt-static"

[dependencies.sea-orm]
version = "^0.8.0"
features = ["macros", "sqlx-mysql", "sqlx-sqlite", "sqlx-postgres", "runtime-tokio-rustls"]

[dependencies.models]
path = "entity"

[dependencies.migration]
path = "migration"